# template

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml  windows.yml
cmake/: FetchEssentials.cmake
src/: hello.cu
